# rust_bot

./: Cargo.toml  LICENSE  config.json  readme.md
bible/: 1_chronicles.json  1_corinthians.json  1_john.json  1_kings.json  1_peter.json  1_samuel.json  1_thessalonians.json  1_timothy.json  2 john.json  2_chronicles.json  2_corinthians.json  2_kings.json  2_peter.json  2_samuel.json  2_thessalonians.json  2_timothy.json  3_john.json  acts.json  amos.json  colossians.json  daniel.json  deuteronomy.json  ecclesiastes.json  ephesians.json  esther.json  exodus.json  ezekiel.json  ezra.json  galatians.json  genesis.json  habakkuk.json  haggai.json  hebrews.json  hosea.json  isaiah.json  james.json  jeremiah.json  job.json  joel.json  john.json  (+26 more)
src/: database.rs  lib.rs  main.rs
src/commands/: addfaq.rs  askgod.rs  bestping.rs  bible.rs  dupe.rs  faq.rs  firstdeath.rs  firstkill.rs  firstwords.rs  iam.rs  joindate.rs  joins.rs  kd.rs  lastdeath.rs  lastkill.rs  lastwords.rs  leaves.rs  locate.rs  messages.rs  motd.rs  nwords.rs  online.rs  ping.rs  players.rs  playmsg.rs  playtime.rs  queue.rs  quote.rs  remjm.rs  remlm.rs  savemsg.rs  seen.rs  setjm.rs  setlm.rs  task.rs  top.rs  whois.rs  worstping.rs
