[package]
name = "mc_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
azalea = "0.13.0"
parking_lot = "0.12.4"
tokio = "1.46.1"
uuid = "1.17.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "time", "chrono"] }
serde_json = "1.0.141"
rand = "0.9.0"
reqwest = "0.12.22"
regex = "1.11.1"